infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "PatientManagementVpcF1F9209A": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVpc"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet1Subnet32B9FD34": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1RouteTableA6B004E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
    }
   },
   "DependsOn": [
    "PatientManagementVpcVPCGW05B0D621"
   ]
  },
  "PatientManagementVpcPublicSubnet1EIP57CBC205": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVpcPublicSubnet1EIP57CBC205",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F"
   ]
  },
  "PatientManagementVpcPublicSubnet2Subnet301A18D3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2RouteTable8FB51550": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
    }
   },
   "DependsOn": [
    "PatientManagementVpcVPCGW05B0D621"
   ]
  },
  "PatientManagementVpcPublicSubnet2EIP7F7E2B9F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVpcPublicSubnet2EIP7F7E2B9F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB",
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2"
   ]
  },
  "PatientManagementVpcPrivateSubnet1SubnetBDF7E702": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1RouteTableAssociation4B6E1CD5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1DefaultRouteFABE5400": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2RouteTableAssociation1AA2E279": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2DefaultRouteB1A67D2B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
    }
   }
  },
  "PatientManagementVpcIGW6E5E564D": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVpc"
     }
    ]
   }
  },
  "PatientManagementVpcVPCGW05B0D621": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementEcsCluster3407F30E": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "PatientManagementEcsCluster"
   }
  },
  "PatientManagementEcsClusterDefaultServiceDiscoveryNamespace72B23AB9": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-management.local",
    "Vpc": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "AuthServiceDBSubnetGroupCFE5A552": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
     },
     {
      "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
     }
    ]
   }
  },
  "AuthServiceDBSecurityGroupBE6D28EB": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBSecretAttachmentF30406A9": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDBC6B688BA"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDBC6B688BA": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDBSubnetGroupCFE5A552"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDBSecurityGroupBE6D28EB",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSubnetGroupCED49D16": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDB database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
     },
     {
      "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
     }
    ]
   }
  },
  "PatientServiceDBSecurityGroup6B97C0E5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDB database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDBSecretAttachment90D77B03": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDBB84F9BF9"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDBB84F9BF9": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDBSubnetGroupCED49D16"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDBSecurityGroup6B97C0E5",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDBC6B688BA",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDBB84F9BF9",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskSG04792771": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/MskSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
      },
      {
       "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
      }
     ],
     "InstanceType": "kafka.m5.large",
     "SecurityGroups": [
      {
       "Fn::GetAtt": [
        "MskSG04792771",
        "GroupId"
       ]
      }
     ]
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "3.6.0",
    "NumberOfBrokerNodes": 2
   }
  },
  "AuthServiceTaskDefTaskRoleE6FB6107": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTaskDef854A2664": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPRING_JPA_SHOW_SQL",
        "Value": "true"
       },
       {
        "Name": "JWT_SECRET",
        "Value": "bbjhBa3XbQ6Z7mQw3XbQ6Z7mQwY2mGmK3w9qv4p3XbQ6Z7mQwY2mGmK3w9qv4pH8xTnJrL5YzF1aC6uV0sH8xTnJrL5YzF1aC6uV0sY2mGmK3w9qv4pH8xTnJrL5YzF1aC6uV0ssaFih8928gD29eidjbDJVVjvgvHGChgcHG="
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://host.docker.internal:",
           {
            "Fn::GetAtt": [
             "AuthServiceDBC6B688BA",
             "Endpoint.Port"
            ]
           },
           "/auth-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "AuthServiceDBSecretAttachmentF30406A9"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "600000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "host.docker.internal:4510,host.docker.internal:4511,host.docker.internal:4512"
       }
      ],
      "Essential": true,
      "Image": "auth-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AuthServiceLogGroup34125B38"
        },
        "awslogs-stream-prefix": "auth-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "auth-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4005,
        "HostPort": 4005,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskDefExecutionRole7C070A76",
      "Arn"
     ]
    },
    "Family": "localstackAuthServiceTaskDef0956549B",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AuthServiceTaskDefTaskRoleE6FB6107",
      "Arn"
     ]
    }
   }
  },
  "AuthServiceTaskDefExecutionRole7C070A76": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServiceTaskDefExecutionRoleDefaultPolicyAE4CAA7C": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AuthServiceLogGroup34125B38",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AuthServiceTaskDefExecutionRoleDefaultPolicyAE4CAA7C",
    "Roles": [
     {
      "Ref": "AuthServiceTaskDefExecutionRole7C070A76"
     }
    ]
   }
  },
  "AuthServiceLogGroup34125B38": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/auth-service",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthService3C2B741A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AuthServiceSecurityGroup67F2FA7D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "auth-service",
    "TaskDefinition": {
     "Ref": "AuthServiceTaskDef854A2664"
    }
   },
   "DependsOn": [
    "AuthDbHealthCheck",
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceTaskDefTaskRoleE6FB6107"
   ]
  },
  "AuthServiceSecurityGroup67F2FA7D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AuthService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "AuthDbHealthCheck",
    "AuthServiceDBC6B688BA",
    "AuthServiceDBSecretAttachmentF30406A9",
    "localstackAuthServiceDBSecretE93C53FD3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDBSecurityGroupBE6D28EB",
    "AuthServiceDBSubnetGroupCFE5A552",
    "AuthServiceTaskDefTaskRoleE6FB6107"
   ]
  },
  "BillingServiceTaskDefTaskRoleA6D80CE5": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServiceTaskDef58090539": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "host.docker.internal:4510,host.docker.internal:4511,host.docker.internal:4512"
       }
      ],
      "Essential": true,
      "Image": "billing-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "BillingServiceLogGroupDD61E740"
        },
        "awslogs-stream-prefix": "billing-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "billing-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4001,
        "HostPort": 4001,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9001,
        "HostPort": 9001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "BillingServiceTaskDefExecutionRoleEFBC0673",
      "Arn"
     ]
    },
    "Family": "localstackBillingServiceTaskDefC4EE5F5F",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "BillingServiceTaskDefTaskRoleA6D80CE5",
      "Arn"
     ]
    }
   }
  },
  "BillingServiceTaskDefExecutionRoleEFBC0673": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServiceTaskDefExecutionRoleDefaultPolicy30F56DC0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "BillingServiceLogGroupDD61E740",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BillingServiceTaskDefExecutionRoleDefaultPolicy30F56DC0",
    "Roles": [
     {
      "Ref": "BillingServiceTaskDefExecutionRoleEFBC0673"
     }
    ]
   }
  },
  "BillingServiceLogGroupDD61E740": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/billing-service",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "BillingServiceFEB36D90": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "BillingServiceSecurityGroup3783AD35",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "billing-service",
    "TaskDefinition": {
     "Ref": "BillingServiceTaskDef58090539"
    }
   },
   "DependsOn": [
    "BillingServiceTaskDefTaskRoleA6D80CE5"
   ]
  },
  "BillingServiceSecurityGroup3783AD35": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/BillingService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "BillingServiceTaskDefTaskRoleA6D80CE5"
   ]
  },
  "AnalyticsServiceTaskDefTaskRoleB918AE09": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServiceTaskDef6C4A1331": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "host.docker.internal:4510,host.docker.internal:4511,host.docker.internal:4512"
       }
      ],
      "Essential": true,
      "Image": "analytics-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AnalyticsServiceLogGroupBD82F12A"
        },
        "awslogs-stream-prefix": "analytics-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "analytics-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4002,
        "HostPort": 4002,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServiceTaskDefExecutionRoleA927CA46",
      "Arn"
     ]
    },
    "Family": "localstackAnalyticsServiceTaskDefA5DA23BD",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServiceTaskDefTaskRoleB918AE09",
      "Arn"
     ]
    }
   }
  },
  "AnalyticsServiceTaskDefExecutionRoleA927CA46": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServiceTaskDefExecutionRoleDefaultPolicy6FF4E1B2": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AnalyticsServiceLogGroupBD82F12A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AnalyticsServiceTaskDefExecutionRoleDefaultPolicy6FF4E1B2",
    "Roles": [
     {
      "Ref": "AnalyticsServiceTaskDefExecutionRoleA927CA46"
     }
    ]
   }
  },
  "AnalyticsServiceLogGroupBD82F12A": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/analytics-service",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AnalyticsServiceCD38C492": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AnalyticsServiceSecurityGroupBA6AE98A",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "analytics-service",
    "TaskDefinition": {
     "Ref": "AnalyticsServiceTaskDef6C4A1331"
    }
   },
   "DependsOn": [
    "AnalyticsServiceTaskDefTaskRoleB918AE09",
    "MskCluster"
   ]
  },
  "AnalyticsServiceSecurityGroupBA6AE98A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/AnalyticsService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "AnalyticsServiceTaskDefTaskRoleB918AE09",
    "MskCluster"
   ]
  },
  "PatientServiceTaskDefTaskRole01FA703D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "PatientServiceTaskDefE3F5BF8E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BILLING_SERVICE_GRPC_PORT",
        "Value": "9001"
       },
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPRING_JPA_SHOW_SQL",
        "Value": "true"
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://host.docker.internal:",
           {
            "Fn::GetAtt": [
             "PatientServiceDBB84F9BF9",
             "Endpoint.Port"
            ]
           },
           "/patient-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "PatientServiceDBSecretAttachment90D77B03"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "600000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin_user"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "host.docker.internal:4510,host.docker.internal:4511,host.docker.internal:4512"
       },
       {
        "Name": "BILLING_SERVICE_ADDRESS",
        "Value": "host.docker.internal"
       }
      ],
      "Essential": true,
      "Image": "patient-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "PatientServiceLogGroup4A5C3809"
        },
        "awslogs-stream-prefix": "patient-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "patient-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4000,
        "HostPort": 4000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "PatientServiceTaskDefExecutionRoleBB272419",
      "Arn"
     ]
    },
    "Family": "localstackPatientServiceTaskDef2F591EB4",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "PatientServiceTaskDefTaskRole01FA703D",
      "Arn"
     ]
    }
   }
  },
  "PatientServiceTaskDefExecutionRoleBB272419": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "PatientServiceTaskDefExecutionRoleDefaultPolicyB7DB27C8": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "PatientServiceLogGroup4A5C3809",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "PatientServiceTaskDefExecutionRoleDefaultPolicyB7DB27C8",
    "Roles": [
     {
      "Ref": "PatientServiceTaskDefExecutionRoleBB272419"
     }
    ]
   }
  },
  "PatientServiceLogGroup4A5C3809": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/patient-service",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceA65AB800": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "PatientServiceSecurityGroup547BE1F2",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "patient-service",
    "TaskDefinition": {
     "Ref": "PatientServiceTaskDefE3F5BF8E"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "MskCluster",
    "PatientDbHealthCheck",
    "PatientServiceDBB84F9BF9",
    "PatientServiceDBSecretAttachment90D77B03",
    "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb",
    "PatientServiceDBSecurityGroup6B97C0E5",
    "PatientServiceDBSubnetGroupCED49D16",
    "PatientServiceTaskDefTaskRole01FA703D"
   ]
  },
  "PatientServiceSecurityGroup547BE1F2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/PatientService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "MskCluster",
    "PatientDbHealthCheck",
    "PatientServiceDBB84F9BF9",
    "PatientServiceDBSecretAttachment90D77B03",
    "localstackPatientServiceDBSecret20E0A9443fdaad7efa858a3daf9490cf0a702aeb",
    "PatientServiceDBSecurityGroup6B97C0E5",
    "PatientServiceDBSubnetGroupCED49D16",
    "PatientServiceTaskDefTaskRole01FA703D"
   ]
  },
  "APIGatewayTaskDefTaskRole3FCAB259": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "APIGatewayTaskDef92BCD980": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_PROFILES_ACTIVE",
        "Value": "prod"
       },
       {
        "Name": "AUTH_SERVICE_URL",
        "Value": "http://host.docker.internal:4005"
       }
      ],
      "Essential": true,
      "Image": "api-gateway",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "APIGatewayLogGroupCDBB0658"
        },
        "awslogs-stream-prefix": "api-gateway",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "APIGatewayContainer",
      "PortMappings": [
       {
        "ContainerPort": 4004,
        "HostPort": 4004,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "APIGatewayTaskDefExecutionRoleA9BF2BB5",
      "Arn"
     ]
    },
    "Family": "localstackAPIGatewayTaskDef7BBFC2EB",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "APIGatewayTaskDefTaskRole3FCAB259",
      "Arn"
     ]
    }
   }
  },
  "APIGatewayTaskDefExecutionRoleA9BF2BB5": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "APIGatewayTaskDefExecutionRoleDefaultPolicy09585884": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "APIGatewayLogGroupCDBB0658",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "APIGatewayTaskDefExecutionRoleDefaultPolicy09585884",
    "Roles": [
     {
      "Ref": "APIGatewayTaskDefExecutionRoleA9BF2BB5"
     }
    ]
   }
  },
  "APIGatewayLogGroupCDBB0658": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/api-gateway",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "APIGatewayServiceLBDA2B7609": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "APIGatewayServiceLBSecurityGroup8524BFD1",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
     },
     {
      "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F",
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB",
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2"
   ]
  },
  "APIGatewayServiceLBSecurityGroup8524BFD1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB localstackAPIGatewayServiceLB0192615A",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "APIGatewayServiceLBSecurityGrouptolocalstackAPIGatewayServiceSecurityGroup37054EEE4004CAF8FB32": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 4004
   }
  },
  "APIGatewayServiceLBPublicListenerD6FA7F47": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "APIGatewayServiceLBDA2B7609"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "APIGatewayServiceA5206149": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "APIGatewayContainer",
      "ContainerPort": 4004,
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "APIGatewayServiceSecurityGroup98F3B93B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
       },
       {
        "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
       }
      ]
     }
    },
    "ServiceName": "api-gateway",
    "TaskDefinition": {
     "Ref": "APIGatewayTaskDef92BCD980"
    }
   },
   "DependsOn": [
    "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70",
    "APIGatewayServiceLBPublicListenerD6FA7F47",
    "APIGatewayTaskDefTaskRole3FCAB259"
   ]
  },
  "APIGatewayServiceSecurityGroup98F3B93B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "localstack/APIGatewayService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "APIGatewayTaskDefTaskRole3FCAB259"
   ]
  },
  "APIGatewayServiceSecurityGroupfromlocalstackAPIGatewayServiceLBSecurityGroup32B4CA424004CA85E4CD": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "ToPort": 4004
   },
   "DependsOn": [
    "APIGatewayTaskDefTaskRole3FCAB259"
   ]
  }
 },
 "Outputs": {
  "APIGatewayServiceLoadBalancerDNS7C7318A3": {
   "Value": {
    "Fn::GetAtt": [
     "APIGatewayServiceLBDA2B7609",
     "DNSName"
    ]
   }
  },
  "APIGatewayServiceServiceURL95056890": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "APIGatewayServiceLBDA2B7609",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
